# routes/api.php
@@ -23,7 +23,7 @@ use App\Http\Controllers\SuperHeroController;
 const superHero = "/superHero/{id}";
 Route::apiResource("users", UsersController::class);
 Route::get("/users/{id}", [UsersController::class, 'show']);
-Route::post("/users/delete/{id}", [UsersController::class, 'destroy']);
+Route::delete("/users/delete/{id}", [UsersController::class, 'destroy']);
 Route::post("/users/add", [UsersController::class, 'store']);
 Route::put('users/update/{id}', [UsersController::class, 'update']);
 Route::get("/superHero/", [SuperHeroController::class, 'index']);
@@ -32,20 +32,22 @@ Route::get(superHero, [SuperHeroController::class, 'show']);
 Route::put(superHero, [SuperHeroController::class, 'update']);
 Route::delete("/superHero/delete/{id}", [SuperHeroController::class, 'destroy']);
 Route::put("/gadget/{id}", [gadgetController::class, 'update']);
+Route::get("/gadget/{id}", [gadgetController::class, 'show']);
 Route::post("/gadget", [gadgetController::class,'store']);
+Route::get("/gadget", [gadgetController::class, 'index']);
 Route::delete("/gadget/delete/{id}", [gadgetController::class, 'destroy']);
 Route::get("/vehicule/{id}", [VehiculeController::class, 'show']);
 Route::get("/vehicule", [VehiculeController::class, 'index']);
-Route::put("/vehicule/{id}", [VehiculeController::class, 'updtade']);
+Route::put("/vehicule/{id}", [VehiculeController::class, 'update']);
 Route::delete("/vehicule/delete/{id}", [VehiculeController::class, 'destroy']);
 Route::post("/vehicule", [VehiculeController::class, 'store']);
 Route::get("/city/{id}", [citiesController::class, 'show']);
 Route::get("/city", [citiesController::class, 'index']);
-Route::put("/city/{id}", [citiesController::class, 'updtade']);
+Route::put("/city/{id}", [citiesController::class, 'update']);
 Route::delete("/city/delete/{id}", [citiesController::class, 'destroy']);
 Route::get("/groups/{id}", [groupsController::class, 'show']);
 Route::get("/groups", [groupsController::class, 'index']);
-Route::put("/groups/{id}", [groupsController::class, 'updtade']);
+Route::put("/groups/{id}", [groupsController::class, 'update']);
 Route::delete("/groups/delete/{id}", [groupsController::class, 'destroy']);
 Route::post("/groups", [groupsController::class, 'store']);
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
